# mytetris

./: .aiderignore  .editorconfig  .gitignore  LICENSE  README.md  audio_manager.py  bot.py  config_manager.py  engine.py  game_state.py  input_handler.py  main.py  main.spec  pyproject.toml  pyrightconfig.json  renderer.py  state_handlers.py  tetris.py  utils.py
.github/workflows/: build.yml  release.yml
tests/: conftest.py  helpers.py  test_engine.py  test_engine_extra.py
