[project]
name = "mytetris"
version = "0.9.7"
description = "Homemade MyTetris with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.7",
    "platformdirs>=3.0.0",
]

[tool.basedpyright]
reportUnusedCallResult = false  # 关闭未使用返回值警告
reportAny = false
reportImportCycles = false      # 接受可管理的循环导入

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
]
