[project]
name = "mytetris"
version = "0.9.9"
description = "Homemade MyTetris with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.7",
    "platformdirs>=3.0.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]
